# Qt4.Apps

./: README.md
Calculator/: Calculator.pro  README.md  calc_window.cpp  calc_window.h  lexer.h  main.cpp
Hello_World/: README  moc_test_window.cpp  test.cpp  test_window.cpp  test_window.h  test_window.pro
Hello_World/test_window.app/Contents/: Info.plist
Hello_World/test_window.app/Contents/MacOS/: test_window
MemoryCheck/: Makefile  README  moc_test_window.cpp  test.cpp  test_window.cpp  test_window.h
MessageBox/: test.cpp  test_window.cpp  test_window.h
QtMutatris/: README
QtMutatris/trunk/QtMutatris-1.0/: Makefile  appMain.cc  gameWidget.cc  gameWidget.h  mainWindow.cc  mainWindow.h  mpmut.cpp  mpmut.h  qtmut.pro  resource.qrc
afgui/aftool/: configure.ac
afgui/aftool/src/: aftool.c
afgui/info/: README
afgui/trunk/afgui/: afgui.icns  afgui.pro  effect.cpp  effect_window.cpp  effect_window.h  rez.qrc
aftool/: README  autogen.sh
aftool/src/: Makefile.am
kmasterpiece/: .kmp  Makefile  README  copyfiles.sh  kmasterpiece.pro  kmp.cpp  kmp_highscore.cpp  kmp_highscore.h  kmp_info.cpp  kmp_info.h  kmp_op.cpp  kmp_op.h  kmp_window.cpp  kmp_window.h  mp.cpp  mp.h
